# mavpilot

./: .gitignore  CHANGELOG.md  README.md  README.ru.md  README_EN.md  README_RU.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: README.md
docs/specs/: 2026-06-02-arucofractal-integration-design.md
docs/superpowers/plans/: 2026-05-28-mavpilot-v0.2.0.md
docs/superpowers/specs/: 2026-05-28-mavpilot-v0.2.0-design.md
examples/: 01_basic_takeoff_land.py  02_precision_land_arucofractal.py  03_precision_land_simulated.py  04_custom_marker_source.py  05_precision_land_gazebo.py  06_landing_target_publisher.py  06_precision_land_gazebo_manual.py  07_controller_comparison.py  run_gazebo.sh
mavpilot/: __init__.py  __main__.py  _commands.py  _connection.py  _mission.py  _mock.py  _precision_land.py  _safety.py  _streamer.py  _telemetry.py  _viz.html  cli.py  constants.py  controller.py  errors.py  types.py  utils.py  viz.py
mavpilot/core/: __init__.py  commands.py  connection.py  controllers.py  mission.py  mock.py  precision_land.py  safety.py  streamer.py  telemetry.py
mavpilot/integrations/: __init__.py  arucofractal.py  gazebo.py  nanofractal.py
mavpilot/viz/: __init__.py  server.py
mavpilot/viz/static/: index.html  log.js  main.js  scene.js  sse.js  styles.css  telemetry.js
scripts/: build_docs.sh
tests/: conftest.py  test_controller.py
tests/integration/: test_aexit_emergency.py  test_emergency_land.py  test_legacy_smoke.py  test_lifecycle.py  test_precision_land.py  test_reconnect.py  test_rtl.py  test_wait_until_ready.py
tests/protocol/: test_arm_sequence.py  test_commands_ack.py  test_data_streams.py  test_mav_lock.py  test_param_readback.py  test_recv_send_concurrency.py  test_watchdog.py
tests/unit/: test_arucofractal_integration.py  test_cli_args.py  test_cli_signal_handler.py  test_controllers.py  test_nanofractal_integration.py  test_telemetry_subscription.py  test_utils_math.py  test_viz_server.py
