[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavpilot"
version = "0.3.0"
description = "Async PX4 drone controller — sequential autonomous flight via MAVLink"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dmitry", email = "demon5326@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["pymavlink>=2.4,<3"]
keywords = ["drone", "UAV", "PX4", "MAVLink", "autonomous", "offboard", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

[project.urls]
Repository = "https://github.com/Onikore/mavpilot"
Issues = "https://github.com/Onikore/mavpilot/issues"

[project.scripts]
mavpilot = "mavpilot.cli:main_sync"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "black>=24.0",
    "mypy>=1.7",
    "ruff>=0.4",
    "pdoc>=14",
]

[tool.setuptools.packages.find]
include = ["mavpilot*"]

[tool.setuptools.package-data]
mavpilot = ["py.typed"]
"mavpilot.viz" = ["static/*.html", "static/*.js", "static/*.css", "static/*.json"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM"]
ignore = [
    "S101",  # asserts ok in tests
    "S311",  # standard random ok for test fixtures
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104"]  # asserts + 0.0.0.0 host literal are fine in tests
"mavpilot/cli.py" = ["BLE001"]  # the BaseException catch is intentional safety

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
warn_return_any = true
# Per-file ignores for pymavlink-touching code can be added with
# `# type: ignore[union-attr]` comments at the specific line.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "sitl: SITL-only tests, skipped by default (run with pytest -m sitl)",
]
